# android_dtc_ndk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_dtc.txt  CMakeLists_dtc_tools.txt  CMakeLists_mkdtimg.txt  README.md  build.sh
jni/: Android.mk  Application.mk
jni/dtc/: dtc-parser.h
jni/dtc/fuzzing/: Android.bp
